syntax = "proto3";

import "google/protobuf/empty.proto";
option go_package = "github.com/ThreeDotsLabs/cli/tdl-cli/course/genproto";

service Server {
  rpc Init(InitRequest) returns (google.protobuf.Empty) {};

  rpc GetCourses(google.protobuf.Empty) returns (GetCoursesResponse) {};
  rpc StartCourse(StartCourseRequest) returns (google.protobuf.Empty) {};

  rpc NextExercise(NextExerciseRequest) returns (NextExerciseResponse) {};

  rpc VerifyExercise(VerifyExerciseRequest) returns (stream VerifyExerciseResponse) {};
}

message InitRequest {
   string token = 1;
}

message Course {
  string id = 1;
}

message GetCoursesResponse {
  repeated Course courses = 1;
}

message StartCourseRequest {
  string course_name = 1;
  string token = 2;
}

message StartCourseResponse {

}

message NextExerciseRequest {
  string course_name = 1;
  string current_exercise_id = 2;
  string token = 3;
}

message NextExerciseResponse {
  string dir = 1;
  string exercise_id = 2;
  repeated File files_to_create = 3;
}

message NextExercise {
  string dir = 1;
  repeated File files_to_create = 2;
}

message VerifyExerciseRequest {
  string exercise_id = 2;
  repeated File files = 3;
  string token = 4;
}

message File {
  string name = 1;
  string path = 2;
  string content = 3;
}

message VerifyExerciseResponse {
  bool finished = 1;
  bool successful = 2;

  string stdout = 3;
  string stderr = 4;

  bool last_exercise = 5;
}